fm/testimonials-grid-section: Finishing mobile overall design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <main>
-    <div class="card backgroud-image">
+    <div class="card background-image violet">
       <div class="avatar">
         <img src="./assets/images/image-daniel.jpg" alt="Daniel's avatar">
         <p class="name">Daniel Clifford</p>
@@ -24,7 +24,7 @@
         I received a job offer mid-course, and the subjects I learned were current, if not more so,
         in the company I joined. I honestly feel I got every penny’s worth.
       </p>
-      <p class="testimony">
+      <p class="review">
         “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
         transition and have heard some people who had an amazing experience here. I signed up
         for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
@@ -32,7 +32,7 @@
         the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
       </p>
     </div>
-    <div class="card">
+    <div class="card dark-grayish-blue">
       <div class="avatar">
         <img src="./assets/images/image-jonathan.jpg" alt="Jonathan's avatar">
         <p class="name">Jonathan Walters</p>
@@ -41,12 +41,12 @@
       <p class="statement">
         The team was very supportive and kept me motivated
       </p>
-      <p class="testimony">
+      <p class="review">
         “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
         for a big company. This was one of the best investments I’ve made in myself. ”
       </p>
     </div>
-    <div class="card">
+    <div class="card white">
       <div class="avatar">
         <img src="./assets/images/image-jeanette.jpg" alt="Jeanette's avatar">
         <p class="name">Jeanette Harmon</p>
@@ -55,12 +55,12 @@
       <p class="statement">
         An overall wonderful and rewarding experience
       </p>
-      <p class="testimony">
+      <p class="review">
         “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
         while doing something I love. ”
       </p>
     </div>
-    <div class="card">
+    <div class="card blackish-blue">
       <div class="avatar">
         <img src="./assets/images/image-patrick.jpg" alt="Patrick's avatar">
         <p class="name">Patrick Abrams</p>
@@ -70,14 +70,14 @@
         Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from
         their experiences was easy.
       </p>
-      <p class="testimony">
+      <p class="review">
         “ The staff seem genuinely concerned about my progress which I find really refreshing. The program
         gave me the confidence necessary to be able to go out in the world and present myself as a capable
         junior developer. The standard is above the rest. You will get the personal attention you need from
         an incredible community of smart and amazing people. ”
       </p>
     </div>
-    <div class="card">
+    <div class="card white">
       <div class="avatar">
         <img src="./assets/images/image-kira.jpg" alt="Kira's avatar">
         <p class="name">Kira Whittle</p>
@@ -86,7 +86,7 @@
       <p class="statement">
         Such a life-changing experience. Highly recommended!
       </p>
-      <p class="testimony">
+      <p class="review">
         “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
         professionals who can help me learn programming step by step. I was encouraged to enroll by a former
         student of theirs who can only say wonderful things about the program. The entire curriculum and staff
