--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <main>
-    <div class="card background-image violet">
+    <div class="card background-image violet spot-1">
       <div class="avatar">
         <img src="./assets/images/image-daniel.jpg" alt="Daniel's avatar">
         <p class="name">Daniel Clifford</p>
@@ -32,7 +32,7 @@
         the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
       </p>
     </div>
-    <div class="card dark-grayish-blue">
+    <div class="card dark-grayish-blue spot-2">
       <div class="avatar">
         <img src="./assets/images/image-jonathan.jpg" alt="Jonathan's avatar">
         <p class="name">Jonathan Walters</p>
@@ -46,7 +46,7 @@
         for a big company. This was one of the best investments I’ve made in myself. ”
       </p>
     </div>
-    <div class="card white">
+    <div class="card white spot-4">
       <div class="avatar">
         <img src="./assets/images/image-jeanette.jpg" alt="Jeanette's avatar">
         <p class="name">Jeanette Harmon</p>
@@ -60,7 +60,7 @@
         while doing something I love. ”
       </p>
     </div>
-    <div class="card blackish-blue">
+    <div class="card blackish-blue spot-5">
       <div class="avatar">
         <img src="./assets/images/image-patrick.jpg" alt="Patrick's avatar">
         <p class="name">Patrick Abrams</p>
@@ -77,7 +77,7 @@
         an incredible community of smart and amazing people. ”
       </p>
     </div>
-    <div class="card white">
+    <div class="card white spot-3">
       <div class="avatar">
         <img src="./assets/images/image-kira.jpg" alt="Kira's avatar">
         <p class="name">Kira Whittle</p>
